Added Google logo link to top left of advanced

--- a/advancedsearch.html
+++ b/advancedsearch.html
@@ -7,7 +7,7 @@
     <body>
 
         <div class="advancedlinks">
-            <div id="Google">Google</div>
+            <div id="Google"><a href="index.html">Google</a></div>
             <div>
                 <a href="index.html">Google Search</a>
                 <a href="imagesearch.html">Google Image Search</a> 
