--- a/advancedsearch.html
+++ b/advancedsearch.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Google Advanced Search</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
 
