--- a/imagesearch.html
+++ b/imagesearch.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Google Image Search</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div class="links">
